# tcc2

./: .gitignore  README.md
C++/Botan/api/: main.cpp  makefile
C++/Botan/load/: main.cpp  makefile
C++/Crypto++/api/: main.cpp  makefile
C++/Crypto++/load/: main.cpp  makefile
C/OpenSSL/api/: makefile  rsa_t.c
C/OpenSSL/load/: main.c  makefile
C/gcrypt/api/: main.c  makefile
C/gcrypt/load/: main.c  makefile
Dump/: extrai_chave.py  script_dump.py
Java/Bouncy Castle/load/: pom.xml
Java/Bouncy Castle/load/src/main/java/org/sample/: Carregar.java
Java/Crypto/load/: pom.xml
Java/Crypto/load/src/main/java/org/sample/: Carregar.java
JavaScript/crypto/: api.js
JavaScript/crypto/load/: rsa_teste.js
JavaScript/forge/: api.js
JavaScript/forge/load/: rsa_teste.js
Python/Cryptography/: api.py
Python/Cryptography/pytest/Carregar/: test_geral.py
Python/Cryptography/pytest/Cifracao/: test_cifracao.py
Python/Cryptography/pytest/Decifracao/: test_decifracao.py
Python/Cryptography/pytest/Geracao/: test_geracao_chaves.py
Python/Pycrypto/pytest/Carregar/: test_pycryto_geral.py
Python/Pycrypto/pytest/Cifracao/: test_pycrypto_cifracao.py
Python/Pycrypto/pytest/Decifracao/: test_pycrypto-decifracao.py
Python/Pycrypto/pytest/Geracao/: test_pycrypto_geracao.py
Rust/Rust Crypto/: Cargo.toml
Rust/Rust Crypto/benches/: carregar-2048.rs  carregar-4096.rs
Rust/Rust Crypto/src/: main.rs
Rust/openssl/: Cargo.toml
Rust/openssl/benches/: carregar-2048.rs  carregar-4096.rs
Rust/openssl/src/: main.rs
