[package]
name = "Rust_Cryp"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = "0.9.7"
rand = "0.8.0"
hex = "0.4.0"
num-bigint = "0.2.5"
num-traits = "0.2.11"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "carregar-2048"
harness = false

[[bench]]
name = "carregar-4096"
harness = false